typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            571,
        ),
        hi: BytePos(
            572,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:10:11
   |
10 |         ? x.length // string
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            719,
        ),
        hi: BytePos(
            720,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:15:29
   |
15 |         ? ((x = "hello") && x) // string
   |                             ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            854,
        ),
        hi: BytePos(
            855,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:20:24
   |
20 |         ? ((x = 10) && x) // number
   |                        ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            976,
        ),
        hi: BytePos(
            977,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:25:11
   |
25 |         ? x // string
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1111,
        ),
        hi: BytePos(
            1112,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:30:11
   |
30 |         ? x // string
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1296,
        ),
        hi: BytePos(
            1297,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:36:24
   |
36 |         ? ((x = 10) && x) // number
   |                        ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1517,
        ),
        hi: BytePos(
            1518,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:43:11
   |
43 |         ? x // boolean
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1788,
        ),
        hi: BytePos(
            1789,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:52:11
   |
52 |         ? x // boolean
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2261,
        ),
        hi: BytePos(
            2262,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:66:11
   |
66 |         ? x // string
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2555,
        ),
        hi: BytePos(
            2556,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:75:11
   |
75 |         ? x // string
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2891,
        ),
        hi: BytePos(
            2892,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInConditionalExpression.ts:85:24
   |
85 |         ? ((x = 10) && x.toString().length) // number
   |                        ^

